--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@ body {
 	font-family: 'Roboto', sans-serif;
     background-color: #F5F5F5;
 }
+
+@media (max-width: 575px) {
+	.section-title {
+		margin-left: 0 !important;
+	}
+}
